<resources>
    <string name="app_name" translatable="false">Elite Note Editor</string>
    <string name="action_settings">Delete all</string>
    <string name="title_activity_editing">Note</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_custom_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_text_file_viewer">Text file viewer</string>
    <string name="title_activity_image_preview">Image preview</string>
    <string name="title_activity_adding_note">Edit</string>
    <string name="confirm_delete">Delete</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="confirm_delete_message">Are you sure, you want to delete this?</string>
    <string name="on_text_changed">Note has changed, do you want to save it?</string>
    <string name="on_note_changed">Note contains text, do you want to save it?</string>
    <string name="save">Save</string>
    <string name="Discard">Discard</string>
    <string name="edit_title_in_dialog_builder">Edit title</string>
    <string name="missing_title">Please enter title</string>
    <string name="success_add">Successfully added</string>
    <string name="success_update">Successfully updated</string>
    <string name="success_delete">Successfully deleted</string>
    <string name="warning_empty_title">The title cannot be empty</string>
    <string name="saveAsPicture">Save as picture</string>
    <string name="saveAsHtml">Save as Html</string>
    <string name="saveAsText">Save as text</string>
    <string name="ask_again">Ask again</string>
    <string name="ask">Ask</string>
    <string name="exit">Exit</string>
    <string name="permanently_disabled_permissions">Permissions has been disabled, please allow it from settings.</string>
    <string name="OK">OK</string>
    <string name="saveAs">Save as</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="shareAsPicture">Share as picture</string>
    <string name="shareAsText">Share as html text</string>
    <string name="shareImages">Share images</string>
    <string name="save_and_share">Save and share</string>
    <string name="thumbnail_selector_dialog_title">Thumbnail type</string>
    <string name="round_thumbnail">Rounded Thumbnail</string>
    <string name="square_thumbnail">Square Thumbnail</string>
    <string name="main_menu_settings_title">Settings</string>
    <string name="main_menu_open_title">Open</string>
    <string name="main_menu_search_view_title">Search</string>
    <string name="searchable_hint">search in notes</string>
    <string name="empty_search_text">No results found</string>
    <string name="no_search_history">No search history</string>
    <string name="notes_are_empty">Notes are empty</string>
    <string name="remove">Remove</string>
    <string name="file_already_exists_with_the_same_name"> A note already exists with the same name</string>
    <string name="confirm_deleteAll_message">Are you sure, you want to delete all?</string>
    <string name="nothing_to_delete">Nothing to delete</string>
    <string name="the_content_is_empty_confirmation">The content is empty, do you want to save anyway?</string>
    <string name="folder_name_exists_already">Folder name exists already</string>
    <string name="folder_name_cant_be_empty">The name can\'t be empty</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="file_saved_to_">File saved to : </string>
    <string name="delete_associated_notes">Delete all associated notes</string>
    <string name="close_button">cancel</string>

    <!--these are preference keys-->

    <string name="key_data_title">title</string>
    <string name="key_data_content">content</string>
    <string name="key_data_id">id</string>
    <string name="key_activity_identifier">activity_identifier</string>
    <string name="key_value_title">mTitle</string>
    <string name="key_value_content">mContent</string>
    <string name="key_value_id">mId</string>
    <string name="key_value_time">mTime</string>
    <string name="key_value_folderName">mFolderName</string>
    <string name="key_data_folderName">FolderName</string>
    <string name="custom_text_size_key">customTextSizeKey</string>
    <string name="customThemeChangekey">custom_theme_change_key</string>
    <string name="color_preference_key">color_preference_key</string>
    <string name="color_accent_preference_key">color_accent_preference_key</string>
    <string name="font_preference_key">font_preference_key</string>
    <string name="about_preference_key">aboutActivity_key</string>
    <string name="cardView_transparency_key">cardView_transparency_key</string>
    <string name="image_selection_preference">image_selection_preference_key</string>
    <string name="wrap_content_preference_key">wrap_content</string>
    <string name="html_selector_preference_key">html_selector_preference_key</string>
    <string name="cache_preference_key">cache_preference_key</string>
    <string name="downscaled_bitmaps_preference_key">downscaled_bitmaps_preference_key</string>
    <string name="round_thumbnail_preference_key">round_thumbnail_preference_key</string>
    <string name="search_result_intent_key">search_result_intent_key</string>
    <string name="from_folder_to_notes_fragment_argument_key">argumentKey</string>
    <string name="from_folder_to_fragment_container_intent_key">intentKey</string>
    <string name="from_folder_to_fragment_container_identify_key">folderItemTitleKey</string>
    <string name="from_folder_to_fragment_container_identifier">1</string>
    <string name="from_folder_to_fragment_container_boolean_argument" translatable="false">filterKey</string>

    <!--these strings belongs to about section-->

    <string name="about_credits">All the app codes and user interface design has been created by me,</string>
    <string name="about_contact"><b>If you like the app, please give a star and write a review,</b> As an indie developer, it would help me a lot</string>
    <string name="help_with_translations">If anyone would like to help me with the translations, please contact me through my email, i\'ll be more than glad.</string>
    <string name="about_icon_created">Folder icon created by :</string>
    <string name="about_from">from</string>
    <string name="version_name">v3.9</string>
    <string name="about_smashicon">Smashicons</string>
    <string name="about_flaticon">https://www.flaticon.com</string>
    <string name="smashicon_link">https://www.Smashicons.com</string>
    <string name="about_features">Features :</string>
    <string name="about_feature_1">*Fast and easy</string>
    <string name="about_feature_2">*Dynamic theme Changing</string>
    <string name="about_feature_3">*Manipulate the colors</string>
    <string name="about_feature_4">*Option to share</string>
    <string name="font_credits">All the fonts are available under their respective licences.</string>
    <string name="more_icon_credits">See full credits</string>
    <string name="send_mail_via">Send Email via </string>
    <string name="email_is_disabled_or_uninstalled">Email is either disabled or uninstalled</string>

    <!--ad related ids-->
    <string name="ad_app_id" translatable="false">ca-app-pub-6051348559611722~4036904045</string>
    <string name="promo_ad_unit" translatable="false">ca-app-pub-6051348559611722/1572762893</string>
    <string name="test_ad_unit" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="new_ad_app_id" translatable="false">ca-app-pub-8687517999343097~2796874296</string>
    <string name="new_ad_unit_id" translatable="false">ca-app-pub-8687517999343097/9142790796</string>


    <!--these strings belongs to the permissions and related stuff-->
    <string name="permission_denied">App needs read access to storage, please allow the permission</string>
    <string name="permission_allow_text">Allow</string>
    <string name="permission_denied_upon_request">Permission has been denied, App needs the permission to open the
        file
    </string>
    <string name="permission_denied_upon_request_in_snip_preview">Permission has been denied, app needs the permission
        to save the image, and share it</string>
    <string name="message_to_ask_to_allow_permission_from_settings">Permissions has been disabled, please allow it from settings.</string>
</resources>
