<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.me.lenovo.petdbhelper.MainActivity">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="3"/>
    <!--<item android:id="@+id/action_settingsOpen"
          android:title="Settings"
          android:orderInCategory="3"/>-->
    <item android:title="@string/main_menu_settings_title"
          android:id="@+id/action_customSettings"
          android:orderInCategory="4"/>
    <item android:title="@string/main_menu_open_title"
          android:orderInCategory="2"
          android:id="@+id/open_external_file"/>
    <item android:title="@string/main_menu_search_view_title"
          android:icon="@drawable/ic_search_black_24dp"
          android:id="@+id/search_view_implementation"
          app:showAsAction="always"
          android:orderInCategory="1"/>
          <!--app:showAsAction="collapseActionView|ifRoom"
          app:actionViewClass="android.widget.SearchView"/>-->
    <!--<item android:title="Folder"
          android:showAsAction="never"
          android:orderInCategory="5"
          android:id="@+id/open_folder"/>-->
</menu>
