<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/idlePadding_forAbout"
            android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
        >
            <ImageView android:layout_width="128dp"
                       android:layout_height="128dp"
                       android:src="@drawable/app_icon"
                       android:scaleType="fitXY"
                       android:layout_gravity="center_horizontal"
                       android:padding="@dimen/idleContentPadding"
            />
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="A colorful note editor"
                      android:gravity="center_horizontal"
                      android:id="@+id/about_app_title"
                      android:textSize="18sp"
                      android:textColor="?colorAccent"
                      android:paddingBottom="10dp"
                      android:paddingLeft="@dimen/idleContentPadding"
                      android:paddingRight="@dimen/idleContentPadding"
            />
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/version_name"
                      android:textSize="16sp"
                      android:gravity="center_horizontal"
                      android:paddingLeft="16dp"
                      android:paddingRight="16dp"
                      android:paddingBottom="8dp"
            />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/idlePadding_forAbout"
    >
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
        >
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/about_features"
                      android:paddingLeft="@dimen/idlePadding_forAbout"
                      android:paddingRight="@dimen/idlePadding_forAbout"
                      android:paddingBottom="@dimen/idlePadding_forAbout"
            />
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/about_feature_1"
                      android:paddingLeft="@dimen/idlePadding_forAbout"
                      android:paddingRight="@dimen/idlePadding_forAbout"
                      android:paddingBottom="@dimen/idlePadding_forAbout"
            />
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/about_feature_2"
                      android:paddingLeft="@dimen/idlePadding_forAbout"
                      android:paddingRight="@dimen/idlePadding_forAbout"
                      android:paddingBottom="@dimen/idlePadding_forAbout"
            />
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/about_feature_3"
                      android:paddingLeft="@dimen/idlePadding_forAbout"
                      android:paddingRight="@dimen/idlePadding_forAbout"
                      android:paddingBottom="@dimen/idlePadding_forAbout"
            />
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/about_feature_4"
                      android:paddingLeft="@dimen/idlePadding_forAbout"
                      android:paddingRight="@dimen/idlePadding_forAbout"
                      android:paddingBottom="@dimen/idlePadding_forAbout"
            />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/idlePadding_forAbout">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
        >
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/about_credits"
                      android:paddingTop="@dimen/idleTitlePadding"
                      android:paddingLeft="8dp"
                      android:paddingRight="8dp"
                      android:paddingBottom="@dimen/idleContentPadding"
            />
            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_with_translations"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="@dimen/idleContentPadding"
                />
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/about_contact"
                      android:paddingLeft="8dp"
                      android:paddingRight="8dp"
                      android:paddingBottom="@dimen/idleTitlePadding"
            />
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?colorAccent"
                    android:layout_marginTop="@dimen/idlePadding_forAbout"
                    android:layout_marginBottom="@dimen/idlePadding_forAbout"
            />
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/font_credits"
                      android:paddingLeft="8dp"
                      android:paddingRight="8dp"
                      android:paddingBottom="@dimen/idleTitlePadding"
            />
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
            >
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/about_icon_created"
                          android:paddingStart="8dp"
                          android:paddingEnd="8dp"
                />
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="?colorAccent"
                          android:id="@+id/smashiconLink"
                          android:text="@string/about_smashicon"
                />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_marginBottom="12dp"
            >
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/about_from"
                          android:paddingStart="8dp"
                          android:paddingEnd="8dp"
                />
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/flaticonLink"
                          android:textColor="?colorAccent"
                          android:text="@string/about_flaticon"
                />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="8dp"
            >
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:textColor="?colorAccent"
                        android:paddingEnd="8dp"
                        android:id="@+id/seeAll_credits"
                        android:text="@string/more_icon_credits"
                />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_email_black_24dp"
            android:layout_margin="16dp"
            android:id="@+id/email"
            android:layout_gravity="end|bottom"
    />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
