<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="?backgroundColor"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="4dp"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:layout_marginTop="8dp"
              android:id="@+id/folderDeleteInfo_message"
              android:text="@string/confirm_delete_message"
              android:textColor="?android:attr/textColorPrimary"
              android:textSize="14sp"
    />
<CheckBox
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/delete_associated_notes"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="12sp"
        android:padding="4dp"
        android:id="@+id/folder_delete_item_checkbox"
        xmlns:android="http://schemas.android.com/apk/res/android"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:gravity="end"
            android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:textSize="14sp"
                android:id="@+id/folder_item_delete_cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:text="@string/confirm_cancel"
        />
        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/folder_item_delete_cancel_button"
                android:textSize="14sp"
                android:id="@+id/folder_item_delete_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_height="wrap_content"
                android:text="@string/confirm_delete"
        />
    </RelativeLayout>

</LinearLayout>